# skima

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: List.md
examples/: component.rs  rsx.rs  ssr.rs  static.rs
examples/todomvc/: Cargo.toml  Trunk.toml  index.html  package.json
examples/todomvc/src/: action.rs  app.rs  helpers.rs  lib.rs  todo.rs
macro/: Cargo.toml
macro/src/: lib.rs
notes/: 2023-05-07-typeid.md  memo.md  syn-rsx.md
skima-rsx/: BUILD.bazel  Cargo.toml
skima-rsx/src/: lib.rs
src/: action.rs  anydata.rs  combine.rs  component.rs  debug.rs  docs.rs  dynamic.rs  effect.rs  ext.rs  iter.rs  lib.rs  list.rs  macros.rs  reference.rs  static.rs  tap.rs  tree.rs  tuple.rs
src/tests/: reactive.rs
src/web/: api.rs  attr.rs  bump.rs  callback.rs  constant.rs  context.rs  dispatch.rs  effect.rs  event.rs  hook.rs  mod.rs  portal.rs  reactive.rs  root.rs  routing.rs  ssr.rs  stateful.rs  style.rs  tag.rs  text.rs  tree.rs
src/web/helpers/: console.rs  cursor.rs  dom.rs  mod.rs
tests/: bump.rs  fiber.rs  reactive.rs
