[package]
authors = ["Stanislav Panferov <stanislav@panferov.dev>"]
edition = "2021"
name = "skima"
version = "0.1.0"
description = "Rust structural UI library for web"
homepage = "https://github.com/s-panferov/skima"
keywords = ["web", "webasm", "javascript"]
categories = ["gui", "wasm", "web-programming"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bumpalo = { version = "3.11.1", features = ["collections"] }
indexmap= "1.9.2"
by_address= "1.1.0"
tracing= "0.1.37"
castaway= "0.2.2"
fxhash= "0.2.1"
downcast-rs = "1.2.0"
no-panic= "0.1.17"
observe="1.0.0"

wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
smallvec= "1.10.0"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

web-sys={ version = "0.3.60", features = [
  "Window", 
  "console", 
  "Event", 
  "Node", 
  "Text", 
  "Element", 
  "History",
  "HtmlElement", 
  "HtmlCollection",
  "DomTokenList",
  "Document", 
  "NodeList",
  "CssStyleDeclaration",
  "Range"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
