[package]
authors = ["Stanislav Panferov <stanislav@panferov.dev>"]
edition = "2021"
name = "skima-todomvc"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="*"
uuid={version="*", features = ["v4", "fast-rng", "js"]}
skima={path="../.."}
observe="*"
console_error_panic_hook="*"
indexmap="*"
web-sys={ version = "0.3.63", features = [
  "Window", 
  "console", 
  "Event", 
  "Node", 
  "Text", 
  "Element", 
  "History",
  "HtmlElement", 
  "HtmlInputElement",
  "KeyboardEvent",
  "Document", 
] }
